# Scalar

./: .gitignore  Cargo.toml  MEMORY.md  README.md  USER.md  analisis_render_2d_scalar.md  build.sh  std.scl  test_anim.scl  test_animation.scl  test_plot.scl  test_shapes.scl  test_text.scl  test_text_anim.scl
.opencode/agents/: scalar-optimizer.md
crates/scalar_bridge/: Cargo.toml
crates/scalar_bridge/src/: easing.rs  lib.rs  math_eval.rs  ratex_render.rs
crates/scalar_bridge/src/bindings/: animation.rs  camera.rs  imports.rs  latex.rs  mesh.rs  mod.rs  primitives.rs  project.rs  shapes.rs
crates/scalar_cli/: Cargo.toml
crates/scalar_cli/src/: main.rs
crates/scalar_lang/: Cargo.toml
crates/scalar_lang/src/: ast.rs  lexer.rs  lib.rs  parser.rs  runtime.rs
crates/scalar_lang/src/eval/: eval_expr.rs  eval_stmt.rs  mod.rs
wiki/: README.md
wiki/api/: axes.md  colors.md  easing.md  grouping.md  line_cap.md  math_primitives.md  morph_to.md  motion_blur.md  plot.md  set_background_color.md  set_fill.md  set_fps.md  set_mode_2d.md  set_resolution.md  set_stroke.md  set_z_index.md
wiki/api/camera/: set_mode_2d.md
wiki/bindings/: animation_api.md
wiki/engine/: live_preview.md
wiki/lang/: animation.md  axes.md  grammar.md  grammar_spec.md  plot.md  project.md  shapes.md  syntax.md  text.md
wiki/roadmap/: _index.md
